# SIIM-ACR-Pneumothorax-Classification

./: Makefile  README.md  pyproject.toml
configs/: loggers.yaml
data/raw/: .gitignore  stage_2_images.dvc  stage_2_sample_submission.csv.dvc  stage_2_train.csv.dvc
requirements/: requirements.txt
siim_acr_pneumothorax_classification/sapc_logger/: logger.py
