[tool.poetry]
name = "siim-acr-pneumothorax-classification"
version = "0.1.0"
description = ""
authors = ["artem.bardakov <artem.bardakov@gmail.com>"]
readme = "README.md"
packages = [{include = "siim_acr_pneumothorax_classification"}]

[tool.poetry.dependencies]
python = "3.9.13"
torch = "^2.0.0"
kaggle = "^1.5.13"
dvc = "^2.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
